@@ -2190,3 +2190,14 @@ void EU3World::convertCoTs()
 		}
 	}
 }
+
+
+void EU3World::convertSliders()
+{
+	// get EU3 tags
+	log("\t;tag;centralization;nothing;nothing;nothing;nothing;nothing;nothing;nothing\n");
+	for (vector<EU3Country*>::iterator countryItr =	convertedCountries.begin(); countryItr != convertedCountries.end(); countryItr++)
+	{
+		(*countryItr)->convertSliders();
+	}
+}
