@@ -438,3 +438,4 @@ Revision	Log Message
 431		Fix typos in converter mod
 432		Eliminate signed/unsigned mismatch in CK2Version
 433		Autogenerated tags must be three characters long
+434		Centralization slider
